# cmd/gctcli/validation.go
@@ -2,6 +2,7 @@ package main
 
 import (
 	"errors"
+	"github.com/thrasher-corp/gocryptotrader/exchanges/tickertype"
 	"strings"
 
 	"github.com/thrasher-corp/gocryptotrader/exchanges/asset"
@@ -10,6 +11,7 @@ import (
 var (
 	errInvalidPair  = errors.New("invalid currency pair supplied")
 	errInvalidAsset = errors.New("invalid asset supplied")
+	errInvalidType  = errors.New("invalid type supplied")
 )
 
 func validPair(pair string) bool {
@@ -18,5 +20,10 @@ func validPair(pair string) bool {
 
 func validAsset(i string) bool {
 	_, err := asset.New(i)
+	return err == nil
+}
+
+func validtickerType(i string) bool {
+	_, err := tickertype.New(i)
 	return err == nil
 }
